# ibcapuk

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
ib_cgt/: disposal.py  fx_data.py  gain_and_loss.py  match_trades.py  parse_trades.py  report.py  trade.py
ib_cgt/fx/: AUDUSD.csv  CNHUSD.csv  EURUSD.csv  JPYUSD.csv  MXPUSD.csv  SGDUSD.csv
ibcapuk/: disposal.py  match_trades.py  parse_trades.py  report.py  trade.py
ibcapuk/fx/: GBPUSD.csv  KRWUSD.csv
src/ibcapuk/: disposal.py  match_trades.py  parse_trades.py  report.py
src/ibcapuk/fx/: AUDUSD.csv  CADUSD.csv  CHFUSD.csv  CNHUSD.csv  EURUSD.csv  GBPUSD.csv  HKDUSD.csv  JPYUSD.csv  KRWUSD.csv  MXPUSD.csv  SEKUSD.csv  SGDUSD.csv
