[build-system]
requires = ["setuptools>=75.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibcapuk"
version = "0.1.0"
description = "A package for calculating capital gains and losses based on Interactive Broker statements for UK residents."
readme = "README.md"
authors = [
    { name = "Emre Tezel", email = "emre.tezel@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "setuptools>=75.1.0",
    "tabulate>=0.9.0",
    "fpdf2>=2.8.1",
]

[tool.setuptools.packages.find]
where = ["src"]
